test/libsolidity/syntaxTests/types/too_large_numbers.sol
contract C {
  uint8[12222222222202 ** -22 * -21111111111121][1 - 22 * -21111111111121] a;
  uint8[-222222 / 2.1222E222] b;
  uint8[-222222 / 2.1222E222 + -222222222226222222 / 22 / 12E222 / 22220] c;
}
// ----
// TypeError: (21-60): Invalid array length, expected integer literal or constant expression.
// TypeError: (99-119): Invalid array length, expected integer literal or constant expression.
// TypeError: (132-196): Invalid array length, expected integer literal or constant expression.
